--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -7,5 +7,5 @@ zuul.routes.auth-service.service-id=auth-service
 
 zuul.routes.auth-service.strip-prefix=false
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
-zuul.routes.auth-admin.path=/auth/**
+zuul.routes.auth-admin.path=/admin/**
 zuul.routes.auth-admin.service-id=auth-service
