--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -9,3 +9,6 @@ zuul.routes.auth-service.strip-prefix=false
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 zuul.routes.auth-admin.path=/admin/**
 zuul.routes.auth-admin.service-id=auth-service
+
+zuul.routes.auth-admin.path=/order/**
+zuul.routes.auth-admin.service-id=order-service
